Muchos mensajes traducidos

--- a/principal/templates/miscellaneous/admin-menu.html
+++ b/principal/templates/miscellaneous/admin-menu.html
@@ -1,6 +1,6 @@
 <li>
-    <a id="sign_ind_nav" href="/administrator/trip/list/">Trip list</a>
+    <a id="sign_ind_nav" href="/administrator/trip/list/">{% trans "Trip list" %}</a>
 </li>
 <li>
-    <a id="sign_ind_nav" href="/logout">Logout</a>
+    <a id="sign_ind_nav" href="/logout">{% trans "Logout" %}</a>
 </li>
