--- a/principal/templates/profile_details.html
+++ b/principal/templates/profile_details.html
@@ -36,20 +36,20 @@
                 <div class="col-xs-12 col-sm-4">
                     {% if traveller.id == user.traveller.id %}
                     <h2><strong> <i class="fa fa-paypal"></i> {{payments}} </strong></h2>
-                    <p><small>Payments</small></p>
+                    <p><small>{% trans "Payments" %}</small></p>
                     <a href="/payment" class="btn btn-info btn-block"> {% trans "My payments" %} </a>
                     {% endif %}
                 </div>
                 <div class="col-xs-12 col-sm-4">
                     {% if traveller.id == user.traveller.id %}
                     <h2><strong> <i class="fa fa-money"></i> {{traveller.coins}} </strong></h2>
-                    <p><small>Coins</small></p>
+                    <p><small>{% trans "Coins" %}</small></p>
                     <button class="btn btn-info btn-block" onclick="window.location.href='/coin/list/'">{% trans "View coin movements" %}</button>
                     {% endif %}
                 </div>
                 <div class="col-xs-12 col-sm-4">
                     <h2><strong><i class="fa fa-globe"></i> {{ trips }}</strong></h2>
-                    <p><small>Trips</small></p>
+                    <p><small>{% trans "Trips" %}</small></p>
                     {% if traveller.id == user.traveller.id %}
                         <button class="btn btn-info btn-block" onclick="window.location.href='/trip/mylist/'">{% trans "View my trips" %}</button>
                     {% else %}
