--- a/principal/templates/trip_edit.html
+++ b/principal/templates/trip_edit.html
@@ -94,7 +94,7 @@
 	               <div class="col-xs-12">
 		                <div class="form-group">
 		                  <div class="col-xs-12">
-		                    <input class="btn btn-primary" name="publis" value="{% trans "Publish Trip"%}" type="submit"
+		                    <input class="btn btn-primary" name="publis" value="{% trans "Publish trip"%}" type="submit"
                                    onclick="return confirm({% trans 'Are you sure? An administrator must accept your trip.'%})">
 		                    <span></span>
 		                    <input class="btn btn-primary" name="save" value="{% trans "Save in drafts"%}" type="submit">
