--- a/principal/templates/miscellaneous/anonymous-menu.html
+++ b/principal/templates/miscellaneous/anonymous-menu.html
@@ -1,6 +1,7 @@
+{% load i18n %}
 <li>
     <a id="sign_ind_nav" href="/signin">
         <span class="fa fa-sign-in"></span>
-        <strong>Sign In</strong>
+        <strong>{% trans "Sign In" %}</strong>
     </a>
 </li>
