--- a/principal/templates/profile_edit_password.html
+++ b/principal/templates/profile_edit_password.html
@@ -46,9 +46,9 @@
 	                    </div>
 	                    {% for hidden in form.hidden_fields %}{{ hidden }}{% endfor %}
 	                    <div class="form-group">
-	                        <input class="btn btn-primary" value="Save Changes" type="submit">
+	                        <input class="btn btn-primary" value={% trans "Save Changes" %} type="submit">
 	                        <span></span>
-	                        <a href="/profile/{{ form.id.value }}" class="btn btn-default">Cancel</a>
+	                        <a href="/profile/{{ form.id.value }}" class="btn btn-default">{% trans "Cancel" %}</a>
 	                    </div>
 	                    <div class="alert alert-warning form-group" role="alert">
 	                        <i class="glyphicon glyphicon-warning-sign fa-1x"></i>
