- Redistribución de CSS y JS para que solo se carguen cuando hace falta. - Se ha elimnado el script countUp, que no se usaba. - Se ha editado la vista de estadísticas para arreglos visuales menores.

--- a/principal/templates/show_planning.html
+++ b/principal/templates/show_planning.html
@@ -2,6 +2,9 @@
 {% load i18n %}
 {% block title %} {% trans "Plan details" %} {% endblock %} 
 {% load staticfiles %}
+{% block extrahead %}
+<script type="text/javascript" src="{% static "js/google-maps.js" %}"></script>
+{% endblock %}
 {% block content %}
 <div class="container">
     <!-- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
