--- a/principal/templates/trip_edit.html
+++ b/principal/templates/trip_edit.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
+{% load i18n %}
+{% load staticfiles %}
+{% block extrahead %}
+<link rel="stylesheet" href="{% static "css/summernote.css" %}">
+<link rel="stylesheet" href="{% static "css/summernote-bs3.css" %}">
+<script type="text/javascript" src="{% static "js/summernote.js" %}"></script>
+<script type="text/javascript" src="{% static "js/summernote-es-ES.js" %}"></script>
+{% endblock %}
 {% block content %}
-    {% load i18n %}
+ 
+
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
