--- a/principal/templates/buy_coins.html
+++ b/principal/templates/buy_coins.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% block title %} {% trans "Buy coins" %} {% endblock %}
+{% load staticfiles %}
+{% block extrahead %}
+<link rel="stylesheet" href="{% static "css/pricing-table.css" %}"> 
+{% endblock %}
 {% block content %}
     
 <div class="container">
