--- a/principal/templates/public_trip_details.html
+++ b/principal/templates/public_trip_details.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% block title %} {% trans "Details" %} {% endblock %}
+{% load staticfiles %}
+{% block extrahead %}
+<link rel="stylesheet" href="{% static "css/timeline.css" %}">   
+{% endblock %}
 {% block content %}
     
 <div class="container">
