--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% block title %} {% trans "Sign in" %} {% endblock %}
+{% load staticfiles %}
+{% block extrahead %}
+<link rel="stylesheet" href="{% static "css/sign-in.css" %}"> 
+{% endblock %}
 {% block content %}
 
 <div class="container-fluid">
