--- a/principal/templates/stats.html
+++ b/principal/templates/stats.html
@@ -3,6 +3,11 @@
 {% load i18n %} {% block content %}
 
 <div class="container">
+    <div class="text-center">
+        <h1>{% trans "Statistics" %}</h1>
+        <p>{% trans "There are a few statistics that you might find interesting " %}</p>
+    </div>
+    
 	<div class="row">
 		<div class="col-xs-12 col-sm-6">
 	  	 	<div class="panel panel-default">
